--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -925,13 +925,21 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       access to collision detector. It is very simple class with few methods.
       Let’s look to public methods.<br>
       <span style="font-style: italic;"></span></big><br>
-    <big><i>bool Collision::check_collision(const EUGENEGDK::BOX
-        &amp;first_target,const EUGENEGDK::BOX &amp;second_target);</i> – Check
-      collision between two objects.</big><br>
-    <big> <span style="font-style: italic;">EUGENEGDK::BOX
+    <big style="font-style: italic;"></big><big><span style="font-style: italic;">void
+        Collision::set_target(const EUGENEGDK::BOX &amp;first_target,const
+        EUGENEGDK::BOX &amp;second_target);</span> – Set targets for collision
+      detector.<br>
+      <span style="font-style: italic;">bool Collision::check_collision() const;</span>
+      – Return true if collision between two objects is accepted.<br>
+      <span style="font-style: italic;">bool Collision::check_collision(const
+        EUGENEGDK::BOX &amp;first_target,const EUGENEGDK::BOX
+        &amp;second_target);</span> – Set collision target and check collision
+      between two objects.<br>
+      <span style="font-style: italic;">EUGENEGDK::BOX
         Collision::generate_box(const unsigned int x,const unsigned int y,const
-        unsigned int width,const unsigned int height);</span> – Generate
-      collision related information from the object properties. </big>
+        unsigned int width,const unsigned int height) const;</span> – Generate
+      collision related information from the object properties.<br>
+    </big>
     <h1><a class="mozTocH1" name="mozTocId590919"></a><big> Part 5. Binary files</big></h1>
     <h2><a class="mozTocH2" name="mozTocId200879"></a><big>Chapter 1. The
         sub-namespace</big></h2>
@@ -1910,7 +1918,7 @@ Multimedia API</a>. </big>
         4.3.4 – Collision detection subsystem improved.<br>
         4.3.5 – Small changes.<br>
         4.3.6 – 4.3.8 – System interaction subsystem improved.<br>
-        4.3.9 – Collision detection subsystem improved.<br>
+        4.3.9 – 4.4 – Collision detection subsystem improved.<br>
       </big></span>
   </body>
 </html>
