--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -48,10 +48,11 @@
           <li><a href="#mozTocId597525">Chapter 1. The sub-namespace</a></li>
           <li><a href="#mozTocId236677">Chapter 2. Interaction with operation
               system</a></li>
-          <li><a href="#mozTocId154445">Chapter 3. Random</a></li>
-          <li><a href="#mozTocId853711">Chapter 4. Abnormal program termination</a></li>
-          <li><a href="#mozTocId656377">Chapter 5. Timer</a></li>
-          <li><a href="#mozTocId381935">Chapter 6. Collision</a></li>
+          <li><a href="#mozTocId631983">Chapter 3. Filesystem</a></li>
+          <li><a href="#mozTocId154445">Chapter 4. Random</a></li>
+          <li><a href="#mozTocId853711">Chapter 5. Abnormal program termination</a></li>
+          <li><a href="#mozTocId656377">Chapter 6. Timer</a></li>
+          <li><a href="#mozTocId381935">Chapter 7. Collision</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId590919"> Part 5. Binary files</a>
@@ -866,8 +867,25 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       This is all that you must know about this class. It is just very simple
       class for few important things.<br>
+      <br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId154445"></a><big>Chapter 3. Random</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId631983"></a><big>Chapter 3. Filesystem</big></h2>
+    <big><br>
+      Filesystem subsystem let you doing some file operation. <span style="font-style: italic;">Filesystem</span>
+      class provide simple access to this subsystem. Let’s look to public
+      methods.<br>
+      <br>
+      <span style="font-style: italic;">bool Filesystem::file_exist(const char
+        *name);</span> – Check the target file for exist.<br>
+      <span style="font-style: italic;">bool Filesystem::delete_file(const char
+        *name);</span> – Delete the target file.<br>
+      <br>
+      <span style="text-decoration: underline;">Important remark</span><br>
+      <br>
+      All methods return false if operation failed.<br>
+      <br>
+    </big>
+    <h2><a class="mozTocH2" name="mozTocId154445"></a><big>Chapter 4. Random</big></h2>
     <big><br>
       <span style="font-style: italic;">Random</span> class provide simple
       access to random number generator. Let’s look to public methods.<br>
@@ -878,7 +896,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int number);</span> – Return a random value between zero and
       number.</big><big></big><br>
     <big> <span style="font-style: italic;"></span> </big>
-    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 4. Abnormal
+    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 5. Abnormal
         program termination</big></h2>
     <big><br>
       You can use Halt function for terminate program. This function declared in
@@ -887,7 +905,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">void EUGENEGDK::Halt(const char
         *message);</span> – Terminate the program. Write error message to log
       file if logging enabled. </big><big> </big>
-    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 5. Timer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 6. Timer</big></h2>
     <big><br>
       Timer is very useful thing. Just use <span style="font-style: italic;">Timer</span>
       class for work with the timer. Let’s look to public methods.<br>
@@ -895,10 +913,9 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">void Timer::set_timer(const double
         seconds);</span> – Set timer interval and initialize start point.<br>
       <span style="font-style: italic;">bool Timer::check_timer();</span> –
-      Initialize stop point. Return true and reinitialize start point if
-      interval between stop and start points large or equal than specific
-      seconds.</big><br>
-    <h2><a class="mozTocH2" name="mozTocId381935"></a><big>Chapter 6. Collision</big></h2>
+      Return true and reinitialize start point if interval between stop and
+      start points large or equal than specific seconds.</big><br>
+    <h2><a class="mozTocH2" name="mozTocId381935"></a><big>Chapter 7. Collision</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Very important thing for any
         game</span><br>
@@ -1919,6 +1936,7 @@ Multimedia API</a>. </big>
         4.3.5 – Small changes.<br>
         4.3.6 – 4.3.8 – System interaction subsystem improved.<br>
         4.3.9 – 4.4 – Collision detection subsystem improved.<br>
+        4.4.1 – New subsystem added.<br>
       </big></span>
   </body>
 </html>
