--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -359,6 +359,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -390,6 +391,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
+
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -859,11 +861,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       you program and return user to operation system.<span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Tools::enable_logging(const char
         *name);</span> – Enable </big><big>redirecting </big><big>error
-      messages to a log file. Return false if the operation failed.<br>
-      <span style="font-style: italic;">bool Tools::delete_file(const char
-        *name);</span> – Delete the target file.<br>
-      <span style="font-style: italic;">bool Tools::file_exist(const char
-        *name);</span> – Check the target file for exist.<br>
+      messages to a log file. Return false if the operation failed.<span style="font-style: italic;"></span><br>
       <br>
       This is all that you must know about this class. It is just very simple
       class for few important things.<br>
@@ -1937,6 +1935,7 @@ Multimedia API</a>. </big>
         4.3.6 – 4.3.8 – System interaction subsystem improved.<br>
         4.3.9 – 4.4 – Collision detection subsystem improved.<br>
         4.4.1 – New subsystem added.<br>
+        4.4.1.1 – Documentation updated.<br>
       </big></span>
   </body>
 </html>
