New supported compiler added

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -255,6 +255,9 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW-w64</big></a></li>
+      <li><a href="http://openwatcom.org"><big>Open Watcom 1.9</big></a></li>
+      <li><big><a href="https://open-watcom.github.io">Open Watcom V2 Fork</a><br>
+        </big></li>
       <li><big>Visual C++ 2008</big></li>
       <li><big>Visual C++ 2010</big></li>
       <li><big>Visual C++ 2012</big></li>
@@ -263,6 +266,8 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <li><big>Visual C++ 2017</big></li>
       <li><big>Visual C++ 2019</big></li>
       <li><big>Visual C++ 2022</big></li>
+      <li><big>C++ Builder 2009<br>
+        </big></li>
       <li><big>C++ Builder 2010</big></li>
       <li><big>C++ Builder XE</big></li>
       <li><big>C++ Builder XE2</big></li>
@@ -391,7 +396,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
-
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1936,6 +1940,8 @@ Multimedia API</a>. </big>
         4.3.9 – 4.4 – Collision detection subsystem improved.<br>
         4.4.1 – New subsystem added.<br>
         4.4.1.1 – Documentation updated.<br>
+        4.4.2 – Small changes.<br>
+        4.4.3 – 4.4.4 – New supported compiler added.<br>
       </big></span>
   </body>
 </html>
