--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -370,6 +370,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -488,7 +489,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         bellow.</big></p>
     <big> </big>
     <table style="text-align: left; width: 554px; height: 124px;" cellspacing="2"
-
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1950,6 +1950,7 @@ Multimedia API</a>. </big>
         4.4.2 – Small changes.<br>
         4.4.3 – 4.4.4 – New supported compiler added.<br>
         4.4.4.1 – Documentation updated.<br>
+        4.4.5 – Small changes.<br>
       </big></span>
   </body>
 </html>
