--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -73,7 +73,7 @@
           <li><a href="#mozTocId861609">Chapter 4. Game-pad</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId309127">Part 8. Internal details of the engine
+      <li><a href="#mozTocId309127">Part 7. Internal details of the engine
           subsystems</a>
         <ul>
           <li><a href="#mozTocId383177">Chapter 1. A few words for a curious
@@ -109,7 +109,7 @@
       <li><big>Open source code.</big></li>
       <li><big>Easy to use object–orientated design.</big></li>
       <li><big>Very fast.</big></li>
-      <li><big>Minimum external dependencies: Only DirectX, OPENGL and standard
+      <li><big>Minimum external dependencies: only DirectX, OPENGL and standard
           Windows API libraries.</big></li>
       <li><big>Don’t need to link main program with engine binary file. The
           engine is just source code files with all engine codes.</big></li>
@@ -1634,7 +1634,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
       Return y-direction of specific stick.</big><big></big><br>
     <big></big>
-    <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 8. Internal
+    <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 7. Internal
         details of the engine subsystems</big></h1>
     <big></big> <big> </big>
     <h2><a class="mozTocH2" name="mozTocId383177"></a><big>Chapter 1. A few
@@ -1968,6 +1968,7 @@ Multimedia API</a>. </big>
         4.4.6.1 – Documentation updated.<br>
         4.4.7 – 4.4.8 – Small changes.<br>
         4.4.9 – Windows 2000 support added.<br>
+        4.4.9.1 – Documentation updated.<br>
       </big></span>
   </body>
 </html>
