--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -308,14 +308,16 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="text-decoration: underline;">Note for Visual C++ users</span><br>
       <br>
       You need disable pre-compiled headers before start compilation. Old Visual
-      C++ users can do it via project creation wizard. Visual C++ 2017 or higher
-      users must follow these steps:<br>
+      C++ users can do it via project creation wizard.<br>
+      Visual C++ 2017 or higher users must follow these steps:<br>
       <br>
-      Go to «Project properties – C/C++ – Precompiled Headers»<br>
-      Set «Precomiled Header» option to «Not Using Precompiled Headers»<br>
-      Users of modern Visual C++ versions also must uncomment specific code in
-      eugenegdk.h file.<br>
-      <br>
+    </big>
+    <ul>
+      <li><big> Go to «Project properties – C/C++ – Precompiled Headers»</big></li>
+      <li><big> Set «Precomiled Header» option to «Not Using Precompiled
+          Headers»</big></li>
+    </ul>
+    <big> <br>
       <span style="text-decoration: underline;">Note for MINGW-w64 and TDM-GCC
         users</span><br>
       <br>
@@ -1969,6 +1971,7 @@ Multimedia API</a>. </big>
         4.4.7 – 4.4.8 – Small changes.<br>
         4.4.9 – Windows 2000 support added.<br>
         4.4.9.1 – Documentation updated.<br>
+        4.5 – 4.5.2 – Small changes.<br>
       </big></span>
   </body>
 </html>
