--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -373,6 +373,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -1634,8 +1635,18 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return x-direction of specific stick.<br>
       <span style="font-style: italic;">EUGENEGDK::GAMEPAD_DIRECTION
         Gamepad::get_stick_y(const EUGENEGDK::GAMEPAD_STICKS stick);</span> –
-      Return y-direction of specific stick.</big><big></big><br>
-    <big></big>
+      Return y-direction of specific stick.<br>
+      <span style="font-style: italic;">EUGENEGDK::GAMEPAD_DIRECTION
+        Gamepad::get_left_stick_x();</span> – Return x-direction of left stick.<br>
+      <span style="font-style: italic;">EUGENEGDK::GAMEPAD_DIRECTION
+        Gamepad::get_left_stick_y();</span> – Return y-direction of left stick.<br>
+      <span style="font-style: italic;">EUGENEGDK::GAMEPAD_DIRECTION
+        Gamepad::get_right_stick_x();</span> – Return x-direction of right
+      stick.<br>
+      <span style="font-style: italic;">EUGENEGDK::GAMEPAD_DIRECTION
+        Gamepad::get_right_stick_y();</span> – Return y-direction of right
+      stick.<br>
+    </big>
     <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 7. Internal
         details of the engine subsystems</big></h1>
     <big></big> <big> </big>
@@ -1972,6 +1983,7 @@ Multimedia API</a>. </big>
         4.4.9 – Windows 2000 support added.<br>
         4.4.9.1 – Documentation updated.<br>
         4.5 – 4.5.3 – Small changes.<br>
+        4.5.4 – Game-pad support improved.<br>
       </big></span>
   </body>
 </html>
