--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1984,6 +1984,7 @@ Multimedia API</a>. </big>
         4.4.9.1 – Documentation updated.<br>
         4.5 – 4.5.3 – Small changes.<br>
         4.5.4 – Game-pad support improved.<br>
+        4.5.5 – 4.5.7 – Render improved.<br>
       </big></span>
   </body>
 </html>
