--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1986,6 +1986,7 @@ Multimedia API</a>. </big>
         4.5.4 – Game-pad support improved.<br>
         4.5.5 – 4.5.7 – Render improved.<br>
         4.5.8 – 4.6.2 – Small changes.<br>
+        4.6.3 – Image resizer improved.<br>
       </big></span>
   </body>
 </html>
