Small bug in binary file subsystem fixed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1988,6 +1988,7 @@ Multimedia API</a>. </big>
         4.5.8 – 4.6.2 – Small changes.<br>
         4.6.3 – Image resizer improved.<br>
         4.6.4 – Small changes.<br>
+        4.6.5 – Small bug in binary file subsystem fixed.<br>
       </big></span>
   </body>
 </html>
